@@ -4,6 +4,8 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- For unit tests with Optimica, added check for access to component that are not present in constraining type of declaration
+  (https://github.com/lbl-srg/BuildingsPy/issues/424)
 - For library merger, corrected erroneous replacement of IBPSA in name of issue number
   (https://github.com/lbl-srg/BuildingsPy/issues/412)
 - For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
